@@ -33,6 +33,7 @@
 	  - refreshing spells is allowed at all time (with prompt) (from AceHack)
 	  - Automatically apply unlocking tool when trying to open a locked door
 	  - Options paranoid_hit and paranoid_quit on by default
+	  - Don't autopickup sokoban prizes
 
 	* new dungeon features:
 	  - dead trees (from NetHack Brass)
